# phaeroncore

./: .gitignore  pyproject.toml
phaeron_core/: conditioning.py  train.py  vae.py
phaeron_core/renderer/: __init__.py  adaln.py  block.py  embeddings.py  patchify.py  renderer.py
